--- a/headerMyCollection.html
+++ b/headerMyCollection.html
@@ -1,7 +1,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your collection <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Series</a></li>
+            <li><a href="userSeries.php">Series</a></li>
             <li><a href="#">Games</a></li>
             <li><a href="#">Comics</a></li>
             <li><a href="#">Books</a></li>
