La virgen de cosas
Quitados echos y print_r
Más seguridad (esperemos)
EditContent
Cambio en header
Bug nuevo en login HAY QUE VER ESO EH
Register desactivado temporalmente (posiblemente implemente un sistema
de invitaciones)
Añadido botón de edición en serie

--- a/headerMyCollection.html
+++ b/headerMyCollection.html
@@ -6,5 +6,10 @@
             <li><a href="#">Comics</a></li>
             <li><a href="#">Books</a></li>
             <li><a href="#">Movies</a></li>
+
+            <li role="separator" class="divider"></li>
+
+            <li><a href="createContent.php">Add something new</a></li>
+
           </ul>
         </li>
